Resolve issue with horizontal scrolling

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -11,7 +11,7 @@ main {
   display: block;
   position: absolute;
   top: 10vh;
-  width: 100vw;
+  width: 100%;
 }
 
 .main-nav {
